--- a/Client/index.html
+++ b/Client/index.html
@@ -13,7 +13,7 @@
       <h1 class="title-logo">BANK APP</h1>
       <nav class="navigation">
         <a href="#AboutUs" class="nav-link">About Us</a>
-        <a class="login-account" href="#">Login</a>
+        <a class="login-account" href="./account.html">Login</a>
         <a class="open-account" href="./register.html">Open Account</a>
       </nav>
     </header>
