--- a/Client/register.html
+++ b/Client/register.html
@@ -31,7 +31,7 @@
 
       <label for="DateofBirth">Date of Birth:</label>
       <input type="date" id="DateofBirth" required />
-      <p class="status-text">///</p>
+      <p class="status-text"></p>
 
       <p>
         By creating an account you agree to our <a href="">Terms & Privacy</a>
@@ -40,7 +40,7 @@
       <button id="registerBTN">Open Account</button>
     </div>
     <div class="container signin">
-      <p>Already have an account? <a href="login.html">Sign in</a></p>
+      <p>Already have an account? <a href="account.html">Sign in</a></p>
     </div>
   </body>
 </html>
