--- a/Client/account.html
+++ b/Client/account.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./AccountScripts/mainAccount.js" defer type="module"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
+    <link rel="stylesheet" href="./styles/registerStyles/style.css" />
     <link rel="stylesheet" href="./styles/accountStyles/style.css" />
+    <script src="./scripts/login/loginScript.js" type="module" defer></script>
   </head>
-  <body></body>
+  <body>
+    <section class="loginHTML">
+      <div class="container">
+        <h1>Login</h1>
+
+        <label for="email">Email</label>
+        <input type="text" name="email" id="email" required />
+
+        <label for="psw">Password</label>
+        <input type="password" name="psw" id="password" required />
+
+        <label for="PIN">PIN</label>
+        <input type="password" name="PIN" id="pin" required maxlength="4" />
+        <p class="status-text"></p>
+
+        <button id="loginBTN">Login</button>
+      </div>
+      <div class="container signin" style="margin-bottom: 10rem">
+        <p class="register">
+          Don't have an account? <a href="./register.html">Open Account</a>
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
