--- a/Client/index.html
+++ b/Client/index.html
@@ -22,8 +22,8 @@
       <main>
         <div class="info-box">
           <p>
-            Bun venit la banca noastră!<br />Suntem dedicați să vă oferim cele
-            mai bune servicii bancare!
+            Welcome to our bank!<br />We are dedicated to providing you with the
+            best banking services!
           </p>
           <button class="open-account">Open Account</button>
         </div>
@@ -36,16 +36,16 @@
       <hr />
       <section id="AboutUs">
         <h1>About Us</h1>
-        <h1 class="aboutus-text">Tot ce ai nevoie de la o banca moderna!</h1>
+        <h1 class="aboutus-text">EVERYTHING YOU NEED FROM A MODERN BANK!</h1>
         <div class="cards">
           <div class="card">
             <div class="card-content">
               <h1 class="card-text">100% Digital</h1>
               <p>
-                Deschiderea contului este ușoară. Doar completați câteva
-                informații de bază și contul dvs. va funcționa. Beneficiați de
-                toate beneficiile digital banking acasă. Trimiterea banilor nu
-                era atât de ușoară înainte.
+                Opening an account is easy. Just fill in a few basic information
+                and your account will work. Benefit from all the benefits of
+                digital banking at home. Sending money does not it was so easy
+                before.
               </p>
             </div>
             <img src="./img/green-card.png" alt="Green Visa Card" />
@@ -53,11 +53,11 @@
           <div class="card">
             <img src="./img/green-dolar.png" alt="Green Visa Card" />
             <div class="card-content">
-              <h1 class="card-text">Urmăriți-vă banii crescând</h1>
+              <h1 class="card-text">Watch your money grow</h1>
               <p>
-                Învinge inflația cu dobânda noastră uluitoare de 8,5%. Echipele
-                noastre eficiente au grijă de banii tăi prețioși și îi cresc
-                într-un ritm rapid. Tu semeni o sămânță, o facem un copac.
+                Beat inflation with our staggering 8.5% interest. teams our
+                efficient take care of your precious money and grow it at a fast
+                pace. You plant a seed, we make it a tree.
               </p>
             </div>
           </div>
@@ -66,13 +66,14 @@
     </div>
 
     <section id="Reclama">
-      <h1>Deschide un content chiar acum , nu ezita!</h1>
+      <h1>Open a content right now, don't hesitate!</h1>
       <button class="open-account">Open Account</button>
     </section>
 
     <footer>
       <p class="footer-text">
-        Realizat de <a href="">Razvan Ghilea.</a> © Toate Drepturile Rezervate
+        Made by <a href="https://github.com/razvanghr">Razvan Ghilea.</a> © All
+        Rights Reserved
       </p>
     </footer>
   </body>
