--- a/Client/account.html
+++ b/Client/account.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/registerStyles/style.css" />
     <link rel="stylesheet" href="./styles/accountStyles/style.css" />
     <script src="./scripts/login/loginScript.js" type="module" defer></script>
+    <script src="./scripts/login/accountScript.js" type="module" defer></script>
   </head>
   <body>
     <section class="loginHTML">
@@ -33,5 +34,68 @@
         </p>
       </div>
     </section>
+    <main class="accountPage hide">
+      <h1 class="intro-text"></h1>
+      <div class="balance">
+        <h1>Current Balance</h1>
+        <h1 id="current-balance">0.000€</h1>
+      </div>
+      <section class="account">
+        <div class="movements">
+          <div class="mov">
+            <div class="mov-type">
+              <h1>Deposit</h1>
+            </div>
+            <div class="mov-date">
+              <p>12/02/2020</p>
+            </div>
+            <div class="mov-value">
+              <p>200€</p>
+            </div>
+          </div>
+        </div>
+        <div class="options">
+          <div class="box request-loan">
+            <p>Request Loan</p>
+            <input type="number" , id="loan-input" , placeholder="Value" />
+            <button id="loanBTN">Request</button>
+          </div>
+          <div class="box transfer">
+            <p>Transfer</p>
+            <div class="inputs">
+              <label for="firstName">First Name</label>
+              <input type="text" , id="first-name" />
+              <label for="value">Last Name</label>
+              <input type="text" , id="last-name" />
+              <label for="Value">Value</label>
+              <input type="number" , id="transfer-value" />
+            </div>
+            <button id="transfer">Transfer</button>
+          </div>
+          <div class="box delete">
+            <p>Delete Account</p>
+            <input
+              type="password"
+              ,
+              id="loan-input"
+              ,
+              placeholder="PIN"
+              maxlength="4"
+              required
+            />
+            <button id="deleteBTN">Delete</button>
+          </div>
+        </div>
+      </section>
+      <div id="stats">
+        <h1></h1>
+      </div>
+      <section>
+        <div class="logOut">
+          <h1>Log Out</h1>
+          <button>Log Out</button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
